--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="/static/stylesheets/medium-editor-handsontable.min.css">
   <link rel="stylesheet" type="text/css" href="/static/stylesheets/medium-editor-tables.min.css">
+  <script type="text/javascript" src="/static/javascripts/handsontable.min.js"></script>
   <title>Vuestic Admin</title>
 </head>
 
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
 </body>
 
 </html>
