--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" type="text/css" href="/static/stylesheets/medium-editor-handsontable.min.css">
   <link rel="stylesheet" type="text/css" href="/static/stylesheets/medium-editor-tables.min.css">
-  <script type="text/javascript" src="/static/javascripts/handsontable.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/static/stylesheets/medium-editor-handsontable.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/stylesheets/handsontable.full.css">
+  <script type="text/javascript" src="/static/javascripts/handsontable.full.js"></script>
+  <script type="text/javascript" src="/static/javascripts/handsontable.js"></script>
   <title>Vuestic Admin</title>
 </head>
 
